--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,42 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
   <head>
-    <title>PetsSns</title>
+    <title>Pets_SNS</title>
+    <meta charset="utf-8">
+    <meta name="description" content="自慢のペットのかわいいところをたくさんの人に見てもらおう。動物好きな飼い主さん同士で友達になれます。">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    
     <%= csrf_meta_tags %>
+    
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
   </head>
 
   <body>
-    <%= yield %>
+    
+    <%= render "layouts/navbar" %>
+    
+    <%= yield :introduce %>
+    
+    <div class="container">
+      
+      <%= render "layouts/flash_messages" %>
+      
+      <%= yield %>
+      
+    </div>
+    
+    <%= render "layouts/footer" %>
+    
+    
+    
   </body>
+  
 </html>
