--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -13,8 +13,23 @@
       </div>
       <div class="collapse navbar-collapse" id="navbar_id"> 
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">新規ユーザ</a></li>
-          <li><a href="#">ログイン</a></li>
+          
+          <% if logged_in? %>
+            <li><a href="#">Users</a></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                User_info<span class="caret"></span>
+              </a>
+              <ul class="dropdown-menu">
+                <li><a href="#">マイプロフィール</a></li>
+                <li><%= link_to "ログアウト",logout_path, method: :delete %></li>
+                
+              </ul>
+            </li>
+          <% else %>
+            <li><%= link_to "新規ユーザ", signup_path %></li>
+            <li><%= link_to "ログイン", login_path %></li>
+          <% end %>
         </ul>
       </div>
   
