--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -1,22 +1,28 @@
-<%= content_for :introduce do %>
-  <div class="introduce">
-    <div class="introduce-inner">
-      <div class="introduce-contents">
-        <div class="text-center">
-          <h1>PETでつながる</h1>
+<% if logged_in? %>
+
+<p>ログイン後</p>
+
+<% else %>
+  <%= content_for :introduce do %>
+    <div class="introduce">
+      <div class="introduce-inner">
+        <div class="introduce-contents">
+          <div class="text-center">
+            <h1>PETでつながる</h1>
+          </div>
         </div>
       </div>
     </div>
+  
+  <% end %>
+  
+  <div class="toppage_info text-center">
+    <h2>自分のペットをたくさんの人に見てもらおう。</h2>
+    <h3>かわいいペットの写真を投稿</h3>
+    <h3>飼い主さんのお友達をつくる</h3>
+    
+    <%= link_to "ログイン", login_path, class:"btn btn-success btn-lg" %>
+    
+    
   </div>
-
 <% end %>
-
-<div class="toppage_info text-center">
-  <h2>自分のペットをたくさんの人に見てもらおう。</h2>
-  <h3>かわいいペットの写真を投稿</h3>
-  <h3>飼い主さんのお友達をつくる</h3>
-  
-  <a href="#" class="btn btn-success btn-lg">ログイン</a>
-  
-  
-</div>
