--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer>
   <div class="text-center text-muted">
-    <small>&copy;</small> 2019 Pet_SNS
+    <small>&copy;</small> 2019 Pets_SNS
   </div>
 </footer>
