--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -15,13 +15,13 @@
         <ul class="nav navbar-nav navbar-right">
           
           <% if logged_in? %>
-            <li><a href="#">Users</a></li>
+            <li><%= link_to "Users",users_path %></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                 User_info<span class="caret"></span>
               </a>
               <ul class="dropdown-menu">
-                <li><a href="#">マイプロフィール</a></li>
+                <li><%= link_to "マイプロフィール",current_user %></li>
                 <li><%= link_to "ログアウト",logout_path, method: :delete %></li>
                 
               </ul>
