--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,42 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<div class="users_show_profile">
+  <%= render "layouts/object_profile", obj: @user %>
+</div>
+
+<div class="text-center">
+  <% if current_user == @user %>
+    <%= link_to "プロフィールを編集", edit_user_path(current_user), class:"btn btn-success btn-lg" %>
+  <% else %>
+    <a href="#" class="btn btn-success btn-lg">Follow</a>
+  <% end %>
+</div>
+
+<div class="row">
+  <div class="col-xs-offset-3 col-xs-6">
+    <div class="pets_index_button text-center">
+      <%= link_to "ペット一覧",pets_path, class:"btn btn-lg" %>
+    </div>
+  </div>
+</div>
+
+<div class="row pets_row">
+  <% @pets.each do |pet| %>
+    <div class="col-md-4 a_pet_row">
+      <%= render "layouts/object_profile", obj: pet %>
+      <%#= render "layouts/pet_edit_button", user: @user %>
+      <div class="text-center">
+        <% if current_user == @user %>
+          <%= link_to "ペットのプロフィール編集",edit_pet_path(@user,pet), class:"btn btn-success btn-lg" %>
+        <% end %>
+      </div>
+    </div>
+  <% end %>
+</div>
+
+<div class="row">
+  <ul class="nav nav-tabs nav-justified">
+    <li><a>My_timelines</a></li>
+    <li><a>Good</a></li>
+    <li><a>Following</a></li>
+    <li><a>Follower</a></li>
+  </ul>
+</div>
