--- a/app/views/users/likes.html.erb
+++ b/app/views/users/likes.html.erb
@@ -5,7 +5,7 @@
 <div class="row">
 
   <%= render "nav" %>
-  <%= render "timelines/timelines", timelines: @user.timelines %>
+  <%= render "timelines/timelines", timelines: @goods %>
 
 
 </div>
