--- a/app/views/layouts/_post_form.html.erb
+++ b/app/views/layouts/_post_form.html.erb
@@ -6,6 +6,8 @@
     <%= f.text_area :content, rows:4, class:"form-control", placeholder:"テキスト" %>  
   </div>
   
-  <%= f.submit "投稿する", class:"btn btn-primary btn-block" %>
+  <div class="timeline_post_button">
+    <%= f.submit "投稿する", class:"btn btn-primary btn-block" %>
+  </div>
 
 <% end %>
