--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -6,7 +6,7 @@
       <% if current_user == @user %>
         <%= link_to "ペットを登録", new_pet_path(@user), class:"btn btn-primary btn-block" %>
       <% else %>
-        <a href="#" class="btn btn-success btn-block">Follow</a>  
+        <%= render "friendships/follow_button", user: @user %>
       <% end %>
     </div>
   </div>
