--- a/app/views/layouts/_object_profile.html.erb
+++ b/app/views/layouts/_object_profile.html.erb
@@ -1,17 +1,14 @@
+
 <div class="obj-profile">
-  
 
-    <div class="icon text-center">
-      <img src="/images/free_image_pet.jpeg" alt="no-image" class="img-circle img-lg">
-      <div class="obj_pfofile_name">
-        <h1><%= obj.name %></h1>
-      </div>
-      <div class="profile_info">
-        <h3><%= obj.profile %></h3>
-      </div>
+  <div class="icon text-center">
+    <%= render "layouts/icon_img", obj: obj %>
+    <div class="obj_pfofile_name">
+      <h1><%= obj.name %></h1>
     </div>
+    <div class="profile_info">
+      <h3><%= obj.profile %></h3>
+    </div>
+  </div>
   
-
-
-
 </div>
