--- a/app/views/layouts/_profile_form.html.erb
+++ b/app/views/layouts/_profile_form.html.erb
@@ -8,6 +8,15 @@
   </div>
   
   <div class="form-group">
+    <%= f.label :image, "アイコン画像" %>
+    <%= f.file_field :image %>
+    <br>
+    <p><%= f.check_box :remove_image %>現在のプロフィール画像をやめる</p>
+  </div>
+  
+
+  
+  <div class="form-group">
     <%= f.label :profile, "プロフィール" %>
     <%= f.text_area :profile, class:"form-control", rows:5 %>
   </div>
