--- a/app/views/users/_follow_users.html.erb
+++ b/app/views/users/_follow_users.html.erb
@@ -7,13 +7,13 @@
         
       <li class="media">
         <div class="media-left follow_user_image">  
-          <img src="/images/free_image_pet.jpeg" alt="no-image" class="img-circle img-lg">
+          <%= render "layouts/icon_img", obj: user %>
         </div>
         <div class="media-body">
         <div>
           <h3><%= user.name %></h3>
           <div class="follow_user_show_profile">
-            <%= link_to "プロフィールを見る",user_path(user),class:"btn btn-primary" %>
+            <%= link_to "プロフィール",user_path(user),class:"btn btn-primary" %>
           </div>
         </div>
         <!--<div>-->
