--- a/app/views/layouts/_post_form.html.erb
+++ b/app/views/layouts/_post_form.html.erb
@@ -6,6 +6,11 @@
     <%= f.text_area :content, rows:4, class:"form-control", placeholder:"テキスト" %>  
   </div>
   
+  <div class="form-group">
+    <%= f.label :image, "画像を投稿" %>
+    <%= f.file_field :image %>
+  </div>
+  
   <div class="timeline_post_button">
     <%= f.submit "投稿する", class:"btn btn-primary btn-block" %>
   </div>
