--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -3,7 +3,7 @@
     <div class="container">
       
       <div class="navbar-header">
-        <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar_id" aria-expanded="false">
+        <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar_id">
           <span class="sr-only">Toggle infomation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
