--- a/app/views/pets/edit.html.erb
+++ b/app/views/pets/edit.html.erb
@@ -11,37 +11,7 @@
 
   <div class="col-md-8">
     <div class="profile_form">
-      
-      <%= form_for(@pet) do |f| %>
-        <%= render "layouts/error_messages", model: f.object %>
-        
-        <div class="form-group">
-          <%= f.label :name, "お名前" %>
-          <%= f.text_field :name, class:"form-control"%>
-        </div>
-  
-        <div class="form-group">
-          <%= f.label :profile, "プロフィール" %>
-          <%= f.text_area :profile, class:"form-control", rows:5 %>
-        </div>
-
-        <div class="form-group">
-          <%= f.label :image, "アイコン画像" %>
-          <%= f.file_field :image %>
-          <br>
-          <p><%= f.check_box :remove_image %>現在のプロフィール画像をやめる</p>
-        </div>
-        
-        <div class="form-group">
-          <%= f.hidden_field :user_id, value:@user.id %>
-        </div>
-        
-        <div class="text-right">
-          <%= f.submit "edit", class:"btn btn-primary btn-lg" %>
-        </div>
-        
-      <% end %>
-      
+      <%= render "layouts/profile_form.html", obj: @pet %>
     </div>
   </div>
   
