--- a/app/views/users/_follow_users.html.erb
+++ b/app/views/users/_follow_users.html.erb
@@ -1,6 +1,6 @@
 <% if users.any? %>
 
-  <ul class="mdia-list">
+  <ul class="media-list">
       <div class="follow_users_list">
     <% users.each do |user| %>
     
