--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -35,13 +35,9 @@
     
   </div>
   
-  <div id="guest_user">
-    <h4>
-      アプリの機能を確認したい方は、ゲストアカウントを用意しています。以下を使ってログインしてください。<br><br>
-    </h4>
+  <div id="for-guest">
     <p>
-      email: <b>user1@ruby.ruby</b><br>
-      password: <b>1231</b>
+      ※アプリ機能を確認したい方は、loginページからゲストユーザとしてログインしてください。
     </p>
   </div>
 <% end %>
