--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -201,3 +201,16 @@ img{
   
 }
 
+
+#guest-login{
+  margin: 0 auto;
+  width: 250px;
+  margin-top: 100px;
+}
+
+#for-guest{
+  color: rgba(0,0,0,0.7);
+  font-size: 16px;
+  margin: 25px 0;
+}
+
